k8s/manifests/deployment.yaml
#this is a sample deployment manifest file for a simple web application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
  labels:
    app: go-web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      containers:
      - name: go-web-app
        image: <docker-username>/go-web-app:v1
        ports:
        - containerPort: 80
